# nutspack

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  dev.dockerfile  dev.sh  runtest.sh
.circleci/: config.yml
middleware/: index.js  package.json
middleware/service/fileSrv/: client.js
service/: CMakeLists.txt
service/src/: CMakeLists.txt
service/src/common/: CMakeLists.txt
service/src/common/database/: CMakeLists.txt  database.cc  database.hh
service/src/common/errno/: CMakeLists.txt  Errno.hh
service/src/common/foundation/: CMakeLists.txt  Foundation.cc  Foundation.hh
service/src/common/logging/: CMakeLists.txt  logging.cc  logging.hh
service/src/common/srv/: CMakeLists.txt  Srv.hh
service/src/daemon/: CMakeLists.txt  daemon.cc  fileSrv.proto
service/src/fileSrv/: CMakeLists.txt  FileSrv.cc  FileSrv.hh
service/test/ut/common/: CMakeLists.txt  database_test.cc  logging_test.cc
